package sistem_tehnicki_pregled.model.enums;

public enum AxleId {
    FRONT,
    REAR
}
