package sistem_tehnicki_pregled.model.enums;

public enum FuelType {
    DIESEL,
    PETROL,   // OTO motori
    GAS
}
