package sistem_tehnicki_pregled.model.enums;

public enum LightBulbType {
    NON_HALOGEN,
    HALOGEN_SINGLE_FILAMENT,
    HALOGEN_DUAL_FILAMENT,
    GAS_DISCHARGE  // Xenon / HID
}
