package sistem_tehnicki_pregled.model.enums;

public enum VehicleType {
    M1,
    M2,
    M3
}
